# test_course

./: .gitignore  pyproject.toml
package_name/: capitalize.py
tests/: test_capitalize.py
